--- a/Coding Scripts/ByTopics/DynamicProgramming.ipynb
+++ b/Coding Scripts/ByTopics/DynamicProgramming.ipynb
@@ -24,6 +24,44 @@
     "            max_subsum[i] = max(nums[i], max_subsum[i-1] + nums[i])\n",
     "        return max(max_subsum)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 70. Climbing Stairs\n",
+    "Companies: GG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def climbStairs(self, n):\n",
+    "       # dn = dn-1 + dn-2\n",
+    "        dp = [0] * n\n",
+    "        dp[0] = 1\n",
+    "        if n == 1:\n",
+    "            return dp[0] # need to consider edge case n = 1, o.w the next line out of bound\n",
+    "        dp[1] = 2\n",
+    "        for i in range(2,n):\n",
+    "            dp[i] = dp[i-1] + dp[i-2]\n",
+    "        return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
