--- a/Coding Scripts/ByTopics/DynamicProgramming.ipynb
+++ b/Coding Scripts/ByTopics/DynamicProgramming.ipynb
@@ -55,6 +55,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 118. Pascal's Triangle\n",
+    "Companies: GG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def generate(self, numRows):\n",
+    "        res = []\n",
+    "        res.append([1])\n",
+    "        for i in range(1, numRows):\n",
+    "            temp = [1]\n",
+    "            prev = res[i-1]\n",
+    "            for j in range(len(prev)-1):\n",
+    "                temp.append(prev[j] + prev[j+1])\n",
+    "            temp.append(1)\n",
+    "            res.append(temp)\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 121. Best Time to Buy and Sell Stock\n",
+    "Companies: GG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices):\n",
+    "        min_price, max_profit = float('inf'), 0\n",
+    "        for i in range(len(prices)):\n",
+    "            max_profit = max(max_profit, prices[i] - min_price)\n",
+    "            min_price = min(min_price, prices[i])\n",
+    "        return max_profit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
